# FPGA_PCIe_simple

./: .gitignore  CMakeLists.txt  README.md
src_c/include/: PCIe_func.h
src_c/src/: ._PCIe_func.c  PCIe_func.c  main.c
src_verilog/: axi_bram.sv  fpga_top.sv
src_vivado/: PCIe_Vivado_Project.xpr
src_vivado/PCIe_Vivado_Project.cache/wt/: gui_handlers.wdf  java_command_handlers.wdf  webtalk_pa.xml
src_vivado/PCIe_Vivado_Project.hw/backup/: hw_ila_data_1.ila
src_vivado/PCIe_Vivado_Project.hw/hw_1/: hw.xml
src_vivado/PCIe_Vivado_Project.runs/.jobs/: vrs_config_1.xml  vrs_config_11.xml  vrs_config_18.xml  vrs_config_19.xml  vrs_config_2.xml  vrs_config_23.xml  vrs_config_3.xml  vrs_config_4.xml  vrs_config_8.xml  vrs_config_9.xml
src_vivado/PCIe_Vivado_Project.runs/ila_0_synth_1/: .vivado.begin.rst  dont_touch.xdc  gen_run.xml  ila_0.tcl  ila_0.vds  ila_0_utilization_synth.pb  ila_0_utilization_synth.rpt  project.wdf  rundef.js  runme.sh  vivado.jou  vivado.pb
src_vivado/PCIe_Vivado_Project.runs/impl_1/: .vivado.begin.rst  .write_bitstream.begin.rst  debug_nets.ltx  fpga_top.tcl  fpga_top.vdi  fpga_top_bus_skew_routed.rpt  fpga_top_bus_skew_routed.rpx  fpga_top_clock_utilization_routed.rpt  fpga_top_control_sets_placed.rpt  fpga_top_drc_opted.rpt  fpga_top_drc_opted.rpx  fpga_top_drc_routed.pb  fpga_top_drc_routed.rpt  fpga_top_drc_routed.rpx  fpga_top_io_placed.rpt  fpga_top_methodology_drc_routed.rpt  fpga_top_methodology_drc_routed.rpx  fpga_top_power_routed.rpt  fpga_top_power_summary_routed.pb  fpga_top_route_status.pb  fpga_top_route_status.rpt  rundef.js  (+17 more)
(+151 files in other folders)
